ros_homework/log/build_2023-12-15_13-34-53/CannyRealTime/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/cch/ros_homework/install/CannyRealTime/lib/python3.10/site-packages/CannyRealTime/camera.py", line 14
    self.capture = cv2.VideoCapture('/home/cch/ros_homework/src/CannyRealTime/resource/output.mp4'')
                                                                                                  ^
SyntaxError: unterminated string literal (detected at line 14)

